fix: align footer to right

--- a/style.css
+++ b/style.css
@@ -58,6 +58,10 @@ button:focus {
   outline-offset: 2px;
 }
 
+footer {
+  margin-left: auto;
+}
+
 .total {
   font-size: 48px;
 }
